2009-08-23  Jim Evins  <evins@snaught.com>

	* data/builder/Makefile.am:
	* data/builder/merge-properties-dialog.builder:
	* data/builder/merge-properties-dialog.glade:
	* data/builder/new-label-dialog.builder:
	* data/builder/new-label-dialog.glade:
	* data/builder/object-editor.builder:
	* data/builder/object-editor.glade:
	* data/builder/prefs-dialog.builder:
	* data/builder/prefs-dialog.glade:
	* data/builder/print-custom-widget.builder:
	* data/builder/print-custom-widget.glade:
	* data/builder/property-bar.builder:
	* data/builder/property-bar.glade:
	* data/builder/template-designer.builder:
	* data/builder/template-designer.glade:
	* data/builder/wdgt-media-select.builder:
	* data/builder/wdgt-media-select.glade:
	* po/POTFILES.in:
	* src/merge-properties-dialog.c:
	(gl_merge_properties_dialog_finalize),
	(gl_merge_properties_dialog_construct):
	* src/new-label-dialog.c: (gl_new_label_dialog_finalize),
	(gl_new_label_dialog_construct):
	* src/object-editor-bc-page.c: (gl_object_editor_prepare_bc_page):
	* src/object-editor-data-page.c:
	(gl_object_editor_prepare_data_page):
	* src/object-editor-edit-page.c:
	(gl_object_editor_prepare_edit_page):
	* src/object-editor-fill-page.c:
	(gl_object_editor_prepare_fill_page):
	* src/object-editor-image-page.c:
	(gl_object_editor_prepare_image_page):
	* src/object-editor-line-page.c:
	(gl_object_editor_prepare_line_page):
	* src/object-editor-lsize-page.c:
	(gl_object_editor_prepare_lsize_page):
	* src/object-editor-position-page.c:
	(gl_object_editor_prepare_position_page):
	* src/object-editor-private.h:
	* src/object-editor-shadow-page.c:
	(gl_object_editor_prepare_shadow_page):
	* src/object-editor-size-page.c:
	(gl_object_editor_prepare_size_page):
	* src/object-editor-text-page.c:
	(gl_object_editor_prepare_text_page):
	* src/object-editor.c: (gl_object_editor_init),
	(gl_object_editor_finalize):
	* src/prefs-dialog.c: (gl_prefs_dialog_init),
	(gl_prefs_dialog_finalize), (gl_prefs_dialog_construct),